--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
   <%= render 'shared/menu' %>
+  <%= render 'shared/error_devise' %>
   <div class="container">
   <%= yield %>
     </div>
