--- a/app/views/images/_form.html.slim
+++ b/app/views/images/_form.html.slim
@@ -1,5 +1,5 @@
 = simple_form_for @image do |f|
-  = f.file_field :images, multiple: true
+  = f.file_field :image
   = f.input :title
   = f.input :description
   = f.submit
