--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <%= link_to "Képek", images_path, class: "nav-link" %>
                 </li>
+                  <li class="nav-item">
+                    <%= link_to "Felhasználók", users_path, class: "nav-link" %>
+                </li>
                 <li class="nav-item">
                     <%= link_to "Kilépés", destroy_user_session_path , method: 'delete', class: "nav-link" %>
                 </li>          
