--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -1,6 +1,11 @@
 h1 Images#index 
 h3 Új kép feltöltés:
 = link_to "Feltöltés", new_image_path, class: "btn btn-success"
+
+div.digg_pagination
+    = will_paginate @images, :container => false
+
+
 table.table.table-bordered.table-dark
     tr
         
@@ -12,6 +17,7 @@ table.table.table-bordered.table-dark
             td ACTION
     - @images.each do |image|
         tr
+            td = image_tag image.image.variant(resize_to_limit: [200, 200]).processed if image.image.present?
             td = image_tag image.image, width: 200 if image.image.present?
             td = image.id
             td = image.title
@@ -28,4 +34,5 @@ table.table.table-bordered.table-dark
                 = link_to "Kommentár", image_path(image.id), class: "btn btn-success"
         
   
-  
+div.digg_pagination
+    = will_paginate @images, :container => false 
