--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
   </head>
 
   <body>
+  
   <%= render 'shared/menu' %>
   <%= render 'shared/error_devise' %>
-  <div class="container">
+  <div class="container-fluid">
   <%= yield %>
     </div>
   </body>
