--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,12 +1,12 @@
- <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Javaslat GTA V Powered by ROR</a>
+ <nav class="navbar navbar-expand-md  fixed-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Javaslat GTA V Powered by ROR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Főoldal <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Főoldal <span class="sr-only">(current)</span></a>
             </li>
               <% if !user_signed_in? %>
                 <li class="nav-item">
