--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,6 +1,12 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
 
-git push heroku master
-
-cap production deploy
+p git push heroku master
+br
+p cap production deploy
+br
+p sudo netstat -lpn |grep :5432
+br
+p sudo docker-compose up -d
+br
+p sudo kill
