--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                   <%= link_to "Belépés", login_path, class: "nav-link"  %>
                 </li>
+                   <li class="nav-item active">
+                  <%= link_to "Apocas", apocas_path, class: "nav-link"  %>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="signup">Regisztrálás</a>
                 </li>
@@ -21,6 +24,13 @@
                 <li class="nav-item">
                     <%= link_to "Képek", images_path, class: "nav-link" %>
                 </li>
+                <li class="nav-item active">
+                  <%= link_to "Users", users_path, class: "nav-link"  %>
+                </li>
+                <li class="nav-item active">
+                  <%= link_to "Comments", comments_path, class: "nav-link"  %>
+                </li>
+                
                
                 <li class="nav-item">
                     <%= link_to "Kilépés", "/logout", class: "nav-link" %>
