--- a/app/views/apocas/index.html.slim
+++ b/app/views/apocas/index.html.slim
@@ -40,3 +40,15 @@ table class="table table-dark"
             td 
             td =a.inspect
             td   
+table class="table table-dark"
+  thead
+    tr
+      th scope="col" ID
+      th scope="col" User
+      th scope="col" Darab
+  tbody
+    - @apoca_count_tovabb.each do |a|
+        tr
+            td =a.inspect
+            td =a[0] 
+            td =a[1]
