Folytatom a Stocky-t , felvéve az API , a MODEL , az alapok

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -10,3 +10,7 @@ br
 p sudo docker-compose up -d
 br
 p sudo kill
+br
+p EDITOR="code --wait" bin/rails credentials:edit
+    | Rails.application.credentials.aws[:access_key_id]
+
