--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,15 @@
  *= require bootstrap
  *= require_tree .
  *= require_self
+ 
  */
+ /*
+ *= require gallery/responsive/elastislide
+ *= require gallery/responsive
+ *= require gallery/slideshow
+ *= require gallery/galleria/classic
+ *= require gallery/touch_touch
+*/
  .digg_pagination {
     background: black;
     cursor: default;
