--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -9,16 +9,18 @@ div.digg_pagination
 
 table.table.table-bordered.table-dark
     tr
-        
-            td style="width:100px" IMAGE
+            td style="width:100px" ID
+            td style="width:300px" IMAGE
             td COMMENTS
             td style="width:300px" ACTION
     - @images.each do |image|
-        tr
+        tr  
+            td
+                = image.id
             td  
                 a data-target="#modalIMG_#{image.id}" data-toggle="modal" href="#" class="color-gray-darker td-hover-none"
 				    div class="ba-0 tp-s"
-                        = image_tag image.image.variant(resize_to_limit: [800, 800]).processed, class: "" if image.image.present?
+                        = image_tag image.image.variant(resize_to_limit: [300, 300]).processed, class: "" if image.image.present?
 					    div class="card-body"
 						    h4 class="card-title color-gray-darker" = image.title
 						    p class="card-text color-gray-darker" = image.description
