--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -25,7 +25,7 @@ table.table.table-bordered.table-dark
 						    h4 class="card-title color-gray-darker" = image.title
 						    p class="card-text color-gray-darker" = image.description
 				
-            td 
+            td class="#{ image.done ? 'bg-success' : 'bg-dark' }"
                 - image.comments.each do |com|
                     div class="comment-box"
 	                    div class="heading"
@@ -45,6 +45,10 @@ table.table.table-bordered.table-dark
                                 = link_to "Töröl", com , method: "DELETE", class: "btn btn-primary"
             td 
                 - if current_user.present? 
+                    - if image.done?
+                        = link_to 'Nincs kész', done_path(image.id, id: image.id, done:false), class: 'btn btn-warning mr-2', method: :post  
+                    -else
+                        = link_to 'Kész', done_path(image.id, id: image.id, done:true), class: 'btn btn-success mr-2', method: :post
                     = link_to "Módosít", edit_image_path(image.id), class: "btn btn-primary mr-2"
                     = link_to "Töröl", image_path(image.id), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2"
                     = link_to "Kommentár", image_path(image.id), class: "btn btn-success"
