--- a/app/views/youtubes/index.html.slim
+++ b/app/views/youtubes/index.html.slim
@@ -1,7 +1,8 @@
-
-
 h1 Listing youtubes
 
+div.digg_pagination
+    = will_paginate @images, :container => false
+div = link_to 'Új https://youtu.be link feltöltés', new_youtube_path, class: "btn btn-success"
 
 table
   thead
@@ -29,4 +30,4 @@ table
 
 br
 
-= link_to 'New Youtube', new_youtube_path
+
