--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,4 +1,30 @@
-- @user.each do |u|
-    p = u.username 
-    p = u.id
-    hr
+div class="container"
+    div class="row col-md-6 col-md-offset-2 custyle"
+        table class="table table-striped custab"
+            thead
+            tr
+                th ID
+                th Username
+                th Admin?
+                th class="text-center" Action
+            - @user.each do |u|
+                tr
+                    td =u.id
+                    td =u.username
+                    td 
+                        - if u.admin?
+                            = link_to 'Admin', '', class: "btn btn-success text-light"
+                        - else
+                            
+                    td class="text-center" 
+                        - if current_user.id == u.id || current_user.admin
+                            =link_to 'Edit', edit_user_path(u),  class: "btn btn-info btn-xs text-light"
+                        - if current_user.admin == true && current_user.id != u.id
+                            =link_to 'DEL', user_path(u),  class: "btn btn-danger btn-xs text-light", method: "DELETE"  
+                        -else 
+                            =link_to 'DEL', '',  class: "btn btn-danger btn-xs text-light"
+                        
+                
+                
+
+
