--- a/app/views/youtubes/index.html.slim
+++ b/app/views/youtubes/index.html.slim
@@ -2,7 +2,7 @@ h1 Listing youtubes
 
 div.digg_pagination
     = will_paginate @images, :container => false
-div = link_to 'Új https://youtu.be link feltöltés', new_youtube_path, class: "btn btn-success"
+div = link_to 'Új https://youtu.be link  feltöltés', new_youtube_path, class: "btn btn-success"
 
 table
   thead
@@ -26,7 +26,9 @@ table
         td = youtube.done
         td = link_to 'Show', youtube
         td = link_to 'Edit', edit_youtube_path(youtube)
-        td = link_to 'Destroy', youtube, data: { confirm: 'Are you sure?' }, method: :delete
+        td 
+          - if current_user.admin?
+            = link_to 'Destroy', youtube, data: { confirm: 'Are you sure?' }, method: :delete
 
 br
 
