--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -51,8 +51,9 @@ table.table.table-bordered.table-dark
                         = link_to 'Nincs kész', done_path(image.id, id: image.id, done:false), class: 'btn btn-warning mr-2 btn-block', method: :post  
                     -else
                         = link_to 'Kész', done_path(image.id, id: image.id, done:true), class: 'btn btn-success mr-2 btn-block', method: :post
-                    = link_to "Módosít", edit_image_path(image.id), class: "btn btn-primary mr-2 btn-block"
-                    = link_to "Töröl", image_path(image.id), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block"
+                    - if current_user.admin?
+                        = link_to "Módosít", edit_image_path(image.id), class: "btn btn-primary mr-2 btn-block"
+                        = link_to "Töröl", image_path(image.id), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block"
                     = link_to "Kommentár", image_path(image.id), class: "btn btn-success btn-block"
         
   
