--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -1,4 +1,4 @@
-
+= link_to "Email report", users_path, remote: true
 div 
     
     - if current_user.present? 
@@ -46,11 +46,12 @@ table.table.table-bordered.table-dark
                                 = link_to "Edit", edit_comment_path(com), class: "btn btn-primary "
                                 = link_to "Töröl", com , method: "DELETE", class: "btn btn-primary "
             td 
+                = link_to "Email report", images_path, remote: true, class: "btn btn-success"
                 - if current_user.present?
                     - if image.done?
-                        = link_to 'Nincs kész', done_path(image.id, id: image.id, done:false), class: 'btn btn-warning mr-2 btn-block', method: :post  
+                        = link_to 'Nincs kész', done_path(image.id, id: image.id, done:false), class: 'btn btn-warning mr-2 btn-block', method: :post, remote: true   
                     -else
-                        = link_to 'Kész', done_path(image.id, id: image.id, done:true), class: 'btn btn-success mr-2 btn-block', method: :post
+                        = link_to 'Kész', done_path(image.id, id: image.id, done:true), class: 'btn btn-success mr-2 btn-block', method: :post, remote: true 
                     - if current_user.admin?
                         = link_to "Módosít", edit_image_path(image.id), class: "btn btn-primary mr-2 btn-block"
                         = link_to "Töröl", image_path(image.id), method: 'delete', data: { confirm: 'Biztos vagy benne tesó??' }, class: "btn btn-primary mr-2 btn-block"
