--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -39,7 +39,7 @@ table.table.table-bordered.table-dark
                                         = com.user.username.capitalize()
                                     small class="pull-right m-2" = com.created_at
                                     br
-                                p class="text-dark" = com.idea.gsub(URI.regexp, '<a href="\0" target="_BLANK" class="btn btn-success">Link</a>').html_safe
+                                p class="text-dark" = simple_format(com.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-success">Link</a>').html_safe
                                     
                             div class="c-f"
 				                = link_to "Kommentár", image_path(image.id), class: "btn btn-success "  
