--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -28,23 +28,23 @@ table.table.table-bordered.table-dark
 				
             td
                 - image.comments.each do |com|
-                    div class="comment-box"
+                    div class="comment-box bg-dark"
 	                    div class="heading"
                             span style="font-size: 48px; color: gray;"
                                 i class="fas fa-user"
                         div class="content"
-                            div class="h-in"
-                                div class="cont text-dark"
+                            div class="h-in text-light"
+                                div class="cont text-light"
                                     strong 
                                         = com.user.username.capitalize()
                                     small class="pull-right m-2" = com.created_at
                                     br
-                                p class="text-dark" = simple_format(com.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-success">Link</a>').html_safe
+                                p class="" = simple_format(com.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-success text-light">Link</a>').html_safe
                                     
                             div class="c-f"
-				                = link_to "Kommentár", image_path(image.id), class: "btn btn-success "  
-                                = link_to "Edit", edit_comment_path(com), class: "btn btn-primary "
-                                = link_to "Töröl", com , method: "DELETE", class: "btn btn-primary "
+				                = link_to "Kommentár", image_path(image.id), class: "btn btn-success text-light "  
+                                = link_to "Edit", edit_comment_path(com), class: "btn btn-primary text-light "
+                                = link_to "Töröl", com , method: "DELETE", class: "btn btn-primary text-light "
             td 
                 = link_to "Category", done_path(image.id, id: image.id, done:false), method: :post, remote: true
                 - if current_user.present?
